# RideSharingApp

./: Anchor.toml  package-lock.json  package.json  pom.xml  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/ridesharing/: DriverActivity.java  DriverRideActivity.java  LoginActivity.java  LoginRegisterActivity.java  MainActivity.java  MapActivity.java  RegisterActivity.java  RegistrationRequest.java  RideDetailsActivity.java  RiderActivity.java  SplashActivity.java
app/src/main/java/com/example/ridesharing/api/: ApiClient.java  LoginApi.java
app/src/main/res/layout/: activity_driver.xml  activity_driver_ride.xml  activity_login.xml  activity_login_register.xml  activity_map.xml  activity_register.xml  activity_rider.xml  activity_splash.xml
app/src/main/res/values/: colors.xml  strings.xml
client/: client.ts
event-web/src/main/java/com/event/eventweb/entity/: ApplicationUser.java  Requests.java
event-web/src/main/java/com/event/eventweb/exception/handler/: RestExceptionHandler.java
event-web/src/main/java/com/event/eventweb/registration/: RegistrationManager.java  RegistrationMapper.java  RegistrationServiceImpl.java
event-web/src/main/java/com/event/eventweb/response/: ResponseMsg.java
event-web/src/main/resources/: application-test.yml  application.yml
gradle/wrapper/: gradle-wrapper.properties
programs/ride-sharing-program/: Cargo.toml
programs/ride-sharing-program/src/: lib.rs
tests/: anchor.ts
(+2 files in other folders)
